--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/fav.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      name="google-site-verification"
+      content="M0Lh-WCn1jdifxdw8AWvwuqtVHbBEFPpfR3tycWkmBE"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QwkSpd</title>
+    <meta name="title" content="QwkSpd by BenJS" />
+    <meta
+      name="description"
+      content="A simple, fast, and easy to use speed test for your internet connection. Powered by Cloudflare."
+    />
+    <meta property="og:title" content="QwkSpd by BenJS" />
+    <meta
+      property="og:description"
+      content="A simple, fast, and easy to use speed test for your internet connection. Powered by Cloudflare."
+    />
+    <meta property="og:image" content="https://speed.benjs.uk/qwkspd.png" />
+    <meta property="og:url" content="https://speed.benjs.uk/" />
   </head>
   <body>
     <div id="root"></div>
