--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       content="M0Lh-WCn1jdifxdw8AWvwuqtVHbBEFPpfR3tycWkmBE"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- PWA Meta Tags -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#683747ff" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="QwkSpd" />
+    <link rel="apple-touch-icon" href="/qwkspd.png" />
+    
     <title>QwkSpd</title>
     <meta name="title" content="QwkSpd by BenJS" />
     <meta
