--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/fav.png" />
+    <link rel="icon" type="image/webp" href="/fav.webp" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
     <meta name="apple-mobile-web-app-title" content="QwkSpd" />
     <link rel="apple-touch-icon" href="/qwkspd.png" />
     
-    <title>QwkSpd</title>
+    <title id="htmlTitle">QwkSpd</title>
     <meta name="title" content="QwkSpd by BenJS" />
     <meta
       name="description"
